--- a/phase_One/FirstProject/imagepractice.html
+++ b/phase_One/FirstProject/imagepractice.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image Practicet</title>
+    <title>Image Practice</title>
   </head>
   <body>
     <h1>My First HTML Document</h1>
     <h2>First Image</h2>
     <img src="./images/imageOne.png" alt="first image" />
     <h2>SecondImage</h2>
-    <img src="./images//imageTwo.jpeg" alt="secong image" />
+    <img src="./images//imageTwo.jpeg" alt="second image" />
   </body>
 </html>
