--- a/phase_One/FirstProject/appleTerm.html
+++ b/phase_One/FirstProject/appleTerm.html
@@ -17,8 +17,8 @@
     <h3>Ownership of Site; Agreement to Terms of Use</h3>
     <p>
       These Terms and Conditions of Use (the "Terms of Use") apply to the Apple
-      web site located at <a href="www.apple.com">www.apple.com</a> , and all
-      associated sites linked to <a href="www.apple.com">www.apple.com</a> by
+      web site located at <a href="www.apple.com" target="_blank">www.apple.com</a> , and all
+      associated sites linked to <a href="www.apple.com" target="_blank">www.apple.com</a> by
       Apple, its subsidiaries and affiliates, including Apple sites around the
       world (collectively, the "Site"). The Site is the property of Apple Inc.
       ("Apple") and its licensors. BY USING THE SITE, YOU AGREE TO THESE TERMS
