--- a/phase_One/FirstProject/appleTerm.html
+++ b/phase_One/FirstProject/appleTerm.html
@@ -135,31 +135,31 @@
     </p>
     <ul>
       <li style="list-style: square">
-        <a href="">Guidelines for Using Apple Trademarks & Copyrights</a>
+        <a href="#">Guidelines for Using Apple Trademarks & Copyrights</a>
       </li>
       <li style="list-style: square">
-        <a href="">Rights & Permissions</a>
+        <a href="#">Rights & Permissions</a>
       </li>
       <li style="list-style: square">
-        <a href="">Trademarks</a>
+        <a href="#">Trademarks</a>
       </li>
       <li style="list-style: square">
-        <a href="">Claims of Copyright Infringement</a>
+        <a href="#">Claims of Copyright Infringement</a>
       </li>
       <li style="list-style: square">
-        <a href="">Piracy</a>
+        <a href="#">Piracy</a>
       </li>
       <li style="list-style: square">
-        <a href="">Counterfeit Products</a>
+        <a href="#">Counterfeit Products</a>
       </li>
       <li style="list-style: square">
-        <a href="">Apple’s Unsolicited Idea Submission Policy</a>
+        <a href="#">Apple’s Unsolicited Idea Submission Policy</a>
       </li>
       <li style="list-style: square">
-        <a href="">Software License Information</a>
+        <a href="#">Software License Information</a>
       </li>
       <li style="list-style: square">
-        <a href="">Legal Contacts</a>
+        <a href="#">Legal Contacts</a>
       </li>
     </ul>
     <p>
