--- a/phase_One/htmlProject/myProject/myHtmlTags.html
+++ b/phase_One/htmlProject/myProject/myHtmlTags.html
@@ -101,6 +101,7 @@
             <figure>
                 <img src="../Resources/images/dog.jpg" alt="Dog" />
                 <figcaption>Cute dog</figcaption>
+                <a href= "#" download="../Resources/images/dog.jpg">Download</a>
             </figure>
 
             <p><b>Here is a bold text</b> followed by some regular size text.</p>
