--- a/phase_One/htmlProject/myProject/myHtmlTags.html
+++ b/phase_One/htmlProject/myProject/myHtmlTags.html
@@ -99,7 +99,10 @@
 
             <h3>Image using the figure tag</h3>
             <figure>
-                <img src="../Resources/images/dog.jpg" alt="Dog" />
+                <a href="#" download="../Resources/images/dog.jpg">
+
+                    <img src="../Resources/images/dog.jpg" alt="Dog" />
+                </a>
                 <figcaption>Cute dog</figcaption>
                 <a href= "#" download="../Resources/images/dog.jpg">Download</a>
             </figure>
