--- a/phase_One/htmlProject/myProject/myHtmlTags.html
+++ b/phase_One/htmlProject/myProject/myHtmlTags.html
@@ -99,7 +99,7 @@
 
             <h3>Image using the figure tag</h3>
             <figure>
-                <a href="#" download="../Resources/images/dog.jpg">
+                <a href="#" download>
 
                     <img src="../Resources/images/dog.jpg" alt="Dog" />
                 </a>
