--- a/phase_One/FirstProject/imagepractice.html
+++ b/phase_One/FirstProject/imagepractice.html
@@ -12,5 +12,6 @@
     <img src="./images/imageOne.png" alt="first image" />
     <h2>Second Image</h2>
     <img src="./images//imageTwo.jpeg" alt="second image" />
+    <a href="./images/compe.zip">zip download</a>
   </body>
 </html>
