footer copyright added

--- a/phase_One/puppyProject/Projects/index.html
+++ b/phase_One/puppyProject/Projects/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>Puppies Page</h1>
+      <h1>Puppies lovers page</h1>
     </header>
     <section class="hero">
       <div class="hero__image">
@@ -46,7 +46,10 @@
       </div>
     </section>
     <footer>
-      <p>Developed by: SamiCoca</p>
+      <p>
+        Developed by: SamiCoca <br />
+        <span>Copyright @ Evangadi Course</span>
+      </p>
     </footer>
   </body>
 </html>
