--- a/phase_One/puppyProject/Projects/index.html
+++ b/phase_One/puppyProject/Projects/index.html
@@ -13,13 +13,13 @@
     </header>
     <section class="hero">
       <div class="hero__image">
-        <img src="./Images/banner-puppies.jpg" alt="" />
+        <img src="./Images/banner-puppies.jpg" alt="hero-puppy" />
       </div>
     </section>
     <section class="main">
       <div class="main__featured">
         <div>
-          <img src="./Images/puppy-1.jpg" alt="" />
+          <img src="./Images/puppy-1.jpg" alt="puppy-picture-1" />
         </div>
         <div class="center">
           <div>
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div>
-          <img src="./Images/puppy-2.jpg" alt="" />
+          <img src="./Images/puppy-2.jpg" alt="puppy-picture-2" />
         </div>
       </div>
 
