--- a/phase_One/puppyProject/Projects/mini.html
+++ b/phase_One/puppyProject/Projects/mini.html
@@ -8,29 +8,36 @@
     <title>Puppy Lovers</title>
   </head>
   <body>
+    <!-- Header part -->
     <header>
-      <h1 class="tx-center">Puppies lovers page</h1>
+      <h1>Puppies lovers page</h1>
     </header>
+    <!-- Hero part -->
     <section class="hero">
       <img src="./Images/banner-puppies.jpg" alt="" />
     </section>
-    <main class="flex-column">
-      <section class="featured flex">
+    <!-- Main part -->
+    <main>
+      <!-- First Section/ Featured images -->
+      <section class="featured">
         <div>
           <img src="./Images/puppy-1.jpg" alt="puppy-picture-1" />
         </div>
         <div class="bg__pink">
-          <p class="tx-center">Puppy Missing Here!!</p>
+          <div>
+            <p>Puppy Missing Here!!</p>
+          </div>
         </div>
         <div>
           <img src="./Images/puppy-2.jpg" alt="puppy-picture-2" />
         </div>
       </section>
+      <!-- Second Section/ Image Gallery -->
       <section class="gallery">
         <div>
-          <p class="tx-center">More Puppies</p>
+          <p>More Puppies</p>
         </div>
-        <div class="gallery__images flex">
+        <div class="gallery__images">
           <div>
             <img src="./Images/puppy-3.jpg" alt="" />
           </div>
@@ -40,8 +47,9 @@
         </div>
       </section>
     </main>
+    <!-- Footer Part -->
     <footer>
-      <p class="tx-center">Developed by: Group 3</p>
+      <p>Developed by: Group 3</p>
     </footer>
   </body>
 </html>
