--- a/phase_One/old apple/old apple/index.html
+++ b/phase_One/old apple/old apple/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>apple</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
+
+    <title>Apple</title>
 </head>
 
 <body>
@@ -54,7 +56,7 @@
                 <h2>The best for the brightest.<h2>
             </div>
             <div class="mac__link link">
-                <a href="#">Learn more <span>></span></a>
+                <a href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
                 <a href="#">Buy <span> ></span></a>
             </div>
             <div class="mac__image">
@@ -128,21 +130,16 @@
                 </div>
             </div>
             <div class="tv bg__img">
-                <div class="info dark">
-                    <div class="text">
+                <div class="flex">
+                    <div class="info">
                         <img src="./images/icons/apple-tv-logo.png" alt="">
-                        <!-- <h2>iPhone 11 Pro</h2> -->
-                        <!-- <h3>With the new Always-On Retina display.
-                            You’ve never seen a watch like this.</h3> -->
-                        <!-- <p>From $24.95/mo. or $599 with trade‑in.</p> -->
                     </div>
-                    <!-- <div class="link">
-                        <a href="#">Learn more <span>></span></a>
-                        <a href="#">Buy <span> ></span></a>
-                    </div> -->
-                </div>
-                <div class="">
-                    <!-- <img src="./images/home/watch-series-5.jpg" alt=""> -->
+                    <div>
+                        <img src="./images/icons/servant-logo.png" alt="">
+                    </div>
+                  <div>
+                  <p>Watch the trailer</p>
+                  </div>
                 </div>
             </div>
             <div class="airpods">
