--- a/phase_One/old apple/old apple/index.html
+++ b/phase_One/old apple/old apple/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
     <title>Apple</title>
 </head>
@@ -56,8 +56,8 @@
                 <h2>The best for the brightest.<h2>
             </div>
             <div class="mac__link link">
-                <a href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
-                <a href="#">Buy <span> ></span></a>
+                <a href="#">Learn more <i class="fa-solid fa-angle-right fa-xs"></i></a>
+                <a href="#">Buy <i class="fa-solid fa-angle-right fa-xs"></i></a>
             </div>
             <div class="mac__image">
                 <img src="./images/home/macbook-pro.jpg" alt="">
@@ -72,8 +72,8 @@
                         <p>From $24.95/mo. or $599 with trade‑in.</p>
                     </div>
                     <div class="link">
-                        <a href="#">Learn more <span>></span></a>
-                        <a href="#">Buy <span> ></span></a>
+                        <a href="#">Learn more  <i class="fa-solid fa-angle-right fa-xs"></i></a>
+                        <a href="#">Buy  <i class="fa-solid fa-angle-right fa-xs"></i></a>
                     </div>
 
                 </div>
@@ -86,8 +86,8 @@
                         <p>From $24.95/mo. or $599 with trade‑in.</p>
                     </div>
                     <div class="link">
-                        <a href="#">Learn more <span>></span></a>
-                        <a href="#">Buy <span> ></span></a>
+                        <a href="#">Learn more  <i class="fa-solid fa-angle-right fa-xs"></i></a>
+                        <a href="#">Buy  <i class="fa-solid fa-angle-right fa-xs"></i></a>
                     </div>
 
                 </div>
@@ -104,8 +104,8 @@
                         <!-- <p>From $24.95/mo. or $599 with trade‑in.</p> -->
                     </div>
                     <div class="link">
-                        <a href="#">Learn more <span>></span></a>
-                        <a href="#">Buy <span> ></span></a>
+                        <a href="#">Learn more  <i class="fa-solid fa-angle-right fa-xs"></i></a>
+                        <a href="#">Buy  <i class="fa-solid fa-angle-right fa-xs"></i></a>
                     </div>
                 </div>
                 <div class="">
@@ -121,8 +121,8 @@
                         <!-- <p>From $24.95/mo. or $599 with trade‑in.</p> -->
                     </div>
                     <div class="link">
-                        <a href="#">Learn more <span>></span></a>
-                        <a href="#">Buy <span> ></span></a>
+                        <a href="#">Learn more  <i class="fa-solid fa-angle-right fa-xs"></i></a>
+                        <a href="#">Buy  <i class="fa-solid fa-angle-right fa-xs"></i></a>
                     </div>
                 </div>
                 <div class="">
@@ -151,8 +151,8 @@
                         <!-- <p>From $24.95/mo. or $599 with trade‑in.</p> -->
                     </div>
                     <div class="link">
-                        <a href="#">Learn more <span>></span></a>
-                        <a href="#">Buy <span> ></span></a>
+                        <a href="#">Learn more  <i class="fa-solid fa-angle-right fa-xs"></i></a>
+                        <a href="#">Buy  <i class="fa-solid fa-angle-right fa-xs"></i></a>
                     </div>
                 </div>
                 <div class="air__img">
@@ -169,8 +169,8 @@
                         <!-- <p>From $24.95/mo. or $599 with trade‑in.</p> -->
                     </div>
                     <div class="link">
-                        <a href="#">Learn more <span>></span></a>
-                        <a href="#">Buy <span> ></span></a>
+                        <a href="#">Learn more  <i class="fa-solid fa-angle-right fa-xs"></i></a>
+                        <a href="#">Buy  <i class="fa-solid fa-angle-right fa-xs"></i></a>
                     </div>
                 </div>
                 <div class="macbook">
@@ -186,8 +186,8 @@
                         <!-- <p>From $24.95/mo. or $599 with trade‑in.</p> -->
                     </div>
                     <div class="link">
-                        <a href="#">Learn more <span>></span></a>
-                        <a href="#">Buy <span> ></span></a>
+                        <a href="#">Learn more  <i class="fa-solid fa-angle-right fa-xs"></i></a>
+                        <a href="#">Buy  <i class="fa-solid fa-angle-right fa-xs"></i></a>
                     </div>
                 </div>
                 <div class="ipad">
@@ -198,11 +198,15 @@
         </section>
     </main>
     <footer>
+        <div class="foot-cont">
+
+
+        
 <div>
     <p>
         1. Trade In: Trade‑in values vary. iPhone 11 and iPhone 11 Pro promotional pricing is after trade‑in of iPhone 8 Plus and iPhone X in good condition. Additional trade‑in values require purchase of a new iPhone, subject to availability and limits. Must be at least 18. Apple or its trade-in partners reserve the right to refuse or limit any Trade In transaction for any reason. In‑store trade‑in requires presentation of a valid, government-issued photo ID (local law may require saving this information). Sales tax may be assessed on full value of new iPhone. Additional terms from Apple or Apple’s trade-in partners may apply. Monthly pricing: Available to qualified customers and requires 0% APR, 24‑month installment loan with Citizens One, and iPhone activation with AT&T, Sprint, T‑Mobile, or Verizon. Full terms apply.  
     </p>
-    <hr>
+    <!-- <hr> -->
 </div>
 <div class="footer__links">
 <div class="shop">
@@ -222,6 +226,7 @@
     </ul>
 </div>
 <div class="service">
+    <h3>Services</h3>
     <ul>
         <li><a href="#">Apple Music</a></li>
         <li><a href="#">Apple News+</a></li>
@@ -300,6 +305,38 @@
 
 </div>
 
+</div>
+<div>
+    <p>
+        More ways to shop: <a href="#">Find an Apple Store</a> or <a href="#">other retailerother retailer</a>  near you. Or call 1-800-MY-APPLE.   
+    </p>
+</div>
+<div class="copyright">
+<p>
+    Copyright © 2019 Apple Inc. All rights reserved.   
+</p>
+<div class="policy">
+
+
+<ul>
+    <li>
+        <a href="">Privacy Policy</a> <span>|</span>
+    </li>
+    <li>
+        <a href="">Terms of Use </a> <span>|</span>
+    </li>
+    <li>
+        <a href="">Sales and Refunds </a> <span>|</span>
+    </li>
+    <li>
+        <a href="">Legal </a> <span>|</span>
+    </li>
+    <li>
+        <a href="">Site Map</a>
+    </li>
+</ul>
+</div>
+</div>
 </div>
     </footer>
 </body>
