--- a/phase_One/old apple/old apple/index.html
+++ b/phase_One/old apple/old apple/index.html
@@ -138,7 +138,7 @@
                         <img src="./images/icons/servant-logo.png" alt="">
                     </div>
                   <div>
-                  <p>Watch the trailer</p>
+                  <p>Watch the trailer <i class="fa fa-play-circle" aria-hidden="true"></i></p>
                   </div>
                 </div>
             </div>
