--- a/phase_One/old apple/old apple/index.html
+++ b/phase_One/old apple/old apple/index.html
@@ -60,7 +60,7 @@
                 <a href="#">Buy <i class="fa-solid fa-angle-right fa-xs"></i></a>
             </div>
             <div class="mac__image">
-                <img src="./images/home/macbook-pro.jpg" alt="">
+                <img src="./images/home/mac-laptop.jpg" alt="">
             </div>
         </section>
         <section class="iphone">
@@ -177,7 +177,7 @@
                     <img src="./images/home/macbook-pro.jpg" alt="">
                 </div>
             </div>
-            <div>
+            <div class="maci">
                 <div class="info dark">
                     <div class="text">
                         <img src="./images/icons/new-ipad-logo.png" alt="">
@@ -209,7 +209,7 @@
     <!-- <hr> -->
 </div>
 <div class="footer__links">
-<div class="shop">
+<div>
     <h3>Shop and Learn</h3>
     <ul>
         <li><a href="#">Mac</a></li>
@@ -225,7 +225,7 @@
         <li><a href="#">Gift Cards</a></li>
     </ul>
 </div>
-<div class="service">
+<div>
     <h3>Services</h3>
     <ul>
         <li><a href="#">Apple Music</a></li>
@@ -242,7 +242,7 @@
         <li><a href="#">iCloud.com</a></li>
     </ul>					
 </div>
-<div class="store">
+<div >
     <h3>Apple Store</h3>
 						<ul>
 							<li><a href="#">Find a Store</a></li>
@@ -259,7 +259,7 @@
 						</ul>
 
 </div>
-<div class="apple__for">
+<div>
     <h3>For Business</h3>
 						<ul>
 							<li><a href="#">Apple and Business</a></li>
@@ -283,7 +283,7 @@
 						</ul>
 
 </div>
-<div class="apple__values">
+<div>
     <h3>Apple Values</h3>
 						<ul>
 							<li><a href="#">Find a Store</a></li>
@@ -335,6 +335,10 @@
         <a href="">Site Map</a>
     </li>
 </ul>
+</div>
+<div class="state">
+    <img src="./images/icons/16.png" alt="">
+    <p>United State</p>
 </div>
 </div>
 </div>
