--- a/phase_One/old apple/old apple/index.html
+++ b/phase_One/old apple/old apple/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-
+    <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
     <title>Apple</title>
 </head>
 
@@ -44,7 +44,10 @@
                 <a href="#"><img src="./images/icons/cart.png" alt=""></a>
             </li>
             <li>
-                <a href="#"></a>
+                <div id="toggle" class="menu">
+                    <span class="menu-top"></span>
+                    <span class="menu-botton"></span>
+                </div>
             </li>
         </ul>
     </nav>
@@ -101,15 +104,11 @@
                         <!-- <h2>iPhone 11 Pro</h2> -->
                         <h3>With the new Always-On Retina display.
                             You’ve never seen a watch like this.</h3>
-                        <!-- <p>From $24.95/mo. or $599 with trade‑in.</p> -->
                     </div>
                     <div class="link">
                         <a href="#">Learn more  <i class="fa-solid fa-angle-right fa-xs"></i></a>
                         <a href="#">Buy  <i class="fa-solid fa-angle-right fa-xs"></i></a>
                     </div>
-                </div>
-                <div class="">
-                    <!-- <img src="./images/home/watch-series-5.jpg" alt=""> -->
                 </div>
             </div>
             <div class="card bg__img">
