--- a/phase_One/current apple/index.html
+++ b/phase_One/current apple/index.html
@@ -121,19 +121,51 @@
         <div class="foot-cont">
           <div>
             <p>
-              1. Trade In: Trade‑in values vary. iPhone 11 and iPhone 11 Pro
-              promotional pricing is after trade‑in of iPhone 8 Plus and iPhone
-              X in good condition. Additional trade‑in values require purchase
-              of a new iPhone, subject to availability and limits. Must be at
-              least 18. Apple or its trade-in partners reserve the right to
-              refuse or limit any Trade In transaction for any reason. In‑store
-              trade‑in requires presentation of a valid, government-issued photo
-              ID (local law may require saving this information). Sales tax may
-              be assessed on full value of new iPhone. Additional terms from
-              Apple or Apple’s trade-in partners may apply. Monthly pricing:
-              Available to qualified customers and requires 0% APR, 24‑month
-              installment loan with Citizens One, and iPhone activation with
-              AT&T, Sprint, T‑Mobile, or Verizon. Full terms apply.
+              1. Qualified Purchasers receive an Apple Gift Card when they
+              purchase an eligible Mac or iPad at a Qualifying Location. Only
+              one Apple Gift Card per eligible Mac or iPad per Qualified
+              Purchaser. Offer subject to availability. While supplies last.
+              Qualified Purchasers shall receive a discount equal to the value
+              of the Apple Gift Card off the price of the eligible Mac or iPad,
+              but will be charged for all items in their cart, including the
+              Apple Gift Card. Important notice regarding the checkout receipt
+              and monthly statement for Apple Card Monthly Installment (ACMI)
+              purchases with this promotion: Qualified Purchasers selecting ACMI
+              (a 0% APR payment option) as payment type at checkout shall
+              receive a discount equal to the value of the Apple Gift Card off
+              the price of the eligible Mac or iPad. This will result in one
+              ACMI installment plan over 12 months for the eligible iPad or Mac
+              discounted by the instant credit, and a second ACMI installment
+              plan over 12 months for the full price of the Apple Gift Card. The
+              total combined amount charged over the two separate ACMI
+              installment plans will reflect the original full retail price of
+              the Eligible Product. Separately, Qualified Purchasers will
+              receive and be charged for the Apple Gift Card in the amount of
+              the applicable discount off the eligible Mac or iPad. ACMI is
+              subject to credit approval and credit limit. Variable APRs for
+              Apple Card other than ACMI range from 12.49% to 23.49% based on
+              creditworthiness. Rates as of July 1, 2022. If you choose the
+              pay‑in‑full or one‑time‑payment option for an ACMI‑eligible
+              purchase instead of choosing ACMI as the payment option at
+              checkout, that purchase will be subject to the variable APR
+              assigned to your Apple Card. Taxes and shipping are not included
+              in ACMI transactions and are subject to your standard purchase
+              APR. See the Apple Card Customer Agreement at
+              https://www.goldmansachs.com/terms-and-conditions/Apple-Card-Customer-Agreement.pdf
+              for more information. ACMI is not available for purchases made
+              online at the following special stores: Apple Employee Purchase
+              Plan; participating corporate Employee Purchase Programs; Apple at
+              Work for small businesses; Government, and Veterans and Military
+              Purchase Programs, or on refurbished devices. Apple Card is issued
+              by Goldman Sachs Bank USA, Salt Lake City Branch. Available for
+              qualifying applicants in the United States. If you reside in the
+              U.S. territories, please call Goldman Sachs at 877-255-5923 with
+              questions about accessing this offer or applying for Apple Card.
+              This offer cannot be combined with the Apple Employee Purchase
+              Plan or business loyalty pricing. Availability of in‑store
+              promotion offerings may be limited by Apple Store location
+              closures as a result of COVID‑19. Additional restrictions apply.
+              View full terms and conditions of offer
             </p>
           </div>
           <div class="footer__links">
