--- a/phase_One/old apple/old apple/index.html
+++ b/phase_One/old apple/old apple/index.html
@@ -84,8 +84,8 @@
             <div class="iphone__light bg__img">
                 <div class="info dark">
                     <div class="text">
-                        <h2>iPhone 11 Pro</h2>
-                        <h3>Pro cameras. Pro display. Pro performance.</h3>
+                        <h2>iPhone 11</h2>
+                        <h3>Just the right amount of everything.</h3>
                         <p>From $24.95/mo. or $599 with trade‑in.</p>
                     </div>
                     <div class="link">
