--- a/phase_One/Group apple project/index.html
+++ b/phase_One/Group apple project/index.html
@@ -165,9 +165,10 @@
                             <a href="#">Buy <i class="fa-solid fa-angle-right fa-xs"></i></a>
                         </div>
                     </div>
-                    <div class="air__img">
+                    <!-- Alternative Image insertions -->
+                    <!-- <div class="air__img">
                         <img src="./images/home/air-pods.jpg" alt="">
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="row">
