--- a/phase_One/current apple/index.html
+++ b/phase_One/current apple/index.html
@@ -67,6 +67,22 @@
           <video autoplay loop src="./videos/medium.mp4"></video>
         </div>
       </section>
+      <section class="mac">
+        <div class="mac-info">
+          <div class="mac-text">
+            <h2>MacBook Air</h2>
+            <img src="./images/suppercharged-by.png" alt="" />
+            <!-- <h3>Your new superpower</h3> -->
+            <!-- <p>From $24.95/mo. or $599 with trade‑in.</p> -->
+          </div>
+          <div class="mac-link">
+            <a href="#"
+              >Learn more <i class="fa-solid fa-angle-right fa-xs"></i
+            ></a>
+            <a href="#">Buy <i class="fa-solid fa-angle-right fa-xs"></i></a>
+          </div>
+        </div>
+      </section>
       <section class="iphone">
         <div class="iphone__light bg__img">
           <div class="info dark">
@@ -83,22 +99,48 @@
             </div>
           </div>
         </div>
-        <div class="iphone__dark bg__img">
-          <div class="info dark">
-            <div class="text">
-              <h2>iPhone 13 Pro</h2>
-              <h3>Oh. So. Pro</h3>
-              <!-- <p>From $24.95/mo. or $599 with trade‑in.</p> -->
+      </section>
+      <!-- MOre Product section -->
+      <section>
+        <div class="row">
+          <div class="iphone__dark bg__img">
+            <div class="info dark">
+              <div class="text">
+                <h2>iPhone 13 Pro</h2>
+                <h3>Oh. So. Pro</h3>
+                <!-- <p>From $24.95/mo. or $599 with trade‑in.</p> -->
+              </div>
+              <div class="link">
+                <a href="#"
+                  >Learn more <i class="fa-solid fa-angle-right fa-xs"></i
+                ></a>
+                <a href="#"
+                  >Buy <i class="fa-solid fa-angle-right fa-xs"></i
+                ></a>
+              </div>
             </div>
-            <div class="link">
-              <a href="#"
-                >Learn more <i class="fa-solid fa-angle-right fa-xs"></i
-              ></a>
-              <a href="#">Buy <i class="fa-solid fa-angle-right fa-xs"></i></a>
+          </div>
+          <div class="macbook-pro">
+            <div class="info">
+              <div class="text">
+                <h2>MackBook Pro 13"</h2>
+              </div>
+              <div>
+                <img src="./images/sppercharged-by-black.png" alt="" />
+              </div>
+              <div class="link">
+                <a href="#"
+                  >Learn more <i class="fa-solid fa-angle-right fa-xs"></i
+                ></a>
+                <a href="#"
+                  >Buy <i class="fa-solid fa-angle-right fa-xs"></i
+                ></a>
+              </div>
             </div>
           </div>
         </div>
       </section>
+
       <section class="anim-image">
         <img src="./images/46799e0e-0970-41cc-a79e-3388d60fc548.jpg" alt="" />
       </section>
