--- a/phase_One/puppyProject/Projects/index.html
+++ b/phase_One/puppyProject/Projects/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./CSS/style3.css" />
+    <link rel="stylesheet" href="./CSS/minres.css" />
 
     <title>Puppy Lovers</title>
   </head>
@@ -14,34 +14,34 @@
       <h1>Puppies lovers page</h1>
     </header>
     <section class="hero">
-      <div class="hero__image">
+      <div>
         <img src="./Images/banner-puppies.jpg" alt="hero-puppy" />
       </div>
     </section>
     <section class="main">
-      <div class="main__featured">
-        <div>
+      <div class="row">
+        <div class="col">
           <img src="./Images/puppy-1.jpg" alt="puppy-picture-1" />
         </div>
-        <div class="center">
-          <div>
+        <div class="center col">
+          <div class="p__container">
             <p>Puppy Missing Here!!</p>
           </div>
         </div>
-        <div>
+        <div class="col">
           <img src="./Images/puppy-2.jpg" alt="puppy-picture-2" />
         </div>
       </div>
 
-      <div class="main__gallery">
-        <div class="title">
+      <div>
+        <div>
           <p>More Puppies</p>
         </div>
-        <div class="gallery">
-          <div>
+        <div class="row">
+          <div class="col">
             <img src="./Images/puppy-3.jpg" alt="" />
           </div>
-          <div>
+          <div class="col">
             <img src="./Images/puppy-4.jpg" alt="" />
           </div>
         </div>
