--- a/phase_One/puppy project media query/puppy responsive-sami/index.html
+++ b/phase_One/puppy project media query/puppy responsive-sami/index.html
@@ -9,13 +9,17 @@
   </head>
 
   <body>
+    <!-- Header -->
     <header>
-      <h1>puppy lovers page</h1>
+      <h1>Puppy Lovers Page</h1>
     </header>
+    <!-- Hero Section or Banner -->
     <section class="hero">
       <img src="./images/banner-puppies.jpg" alt="" />
     </section>
+    <!-- Main Contents of the page -->
     <main>
+      <!-- Section for the 3 Items -->
       <section>
         <div>
           <img src="./images/puppy-1.jpg" alt="" />
@@ -29,9 +33,11 @@
           <img src="./images/puppy-2.jpg" alt="" />
         </div>
       </section>
+      <!-- Intrance Text to Second Section/ -->
       <div>
         <p>more puppies</p>
       </div>
+      <!-- Section Two or section that holds two items -->
       <section>
         <div>
           <img src="./images/puppy-3.jpg" alt="" />
@@ -41,6 +47,7 @@
         </div>
       </section>
     </main>
+    <!-- footer -->
     <footer>
       <h3>Developed By G3 Family</h3>
     </footer>
