--- a/phase_One/puppy_bootstrap-sami/index.html
+++ b/phase_One/puppy_bootstrap-sami/index.html
@@ -24,12 +24,7 @@
     <section class="container" style="max-width: 960px">
       <div class="d-md-flex gap-2">
         <div class="col mb-3">
-          <img
-            class="img-fluid"
-            style="width: 100%"
-            src="./images/puppy-1.jpg"
-            alt=""
-          />
+          <img class="img-fluid" src="./images/puppy-1.jpg" alt="" />
         </div>
         <div
           class="d-none d-md-flex align-items-center justify-content-center col mb-3"
@@ -40,12 +35,7 @@
           </p>
         </div>
         <div class="col mb-3">
-          <img
-            class="img-fluid"
-            style="width: 100%"
-            src="./images/puppy-2.jpg"
-            alt=""
-          />
+          <img class="img-fluid" src="./images/puppy-2.jpg" alt="" />
         </div>
       </div>
     </section>
