--- a/phase_One/apple Bootstrap/index.html
+++ b/phase_One/apple Bootstrap/index.html
@@ -102,7 +102,7 @@
     <!-- Your code goes in here -->
     <!--  -->
     <div class="top-100 bg-light">
-      <div class="container-fluid">
+      <div class="container-fluid" style="padding: 0">
         <!-- Macbook Section -->
         <section>
           <div class="text-center">
@@ -152,7 +152,7 @@
                 src="./images/icons/watch-series5-logo.png"
                 alt=""
               />
-              <div class="fs-5 text-center">
+              <div class="fs-5 text-center mx-auto" style="max-width: 450px">
                 With the new Always-On Retina display. You’ve never seen a watch
                 like this.
               </div>
@@ -172,7 +172,7 @@
                 src="./images/icons/apple-card-logo.png"
                 alt=""
               />
-              <div class="fs-5 text-center">
+              <div class="fs-5 text-center mx-auto" style="max-width: 450px">
                 Get 3% Daily Cash on purchases from Apple using Apple Card.
               </div>
             </div>
