--- a/phase_One/apple Bootstrap/index.html
+++ b/phase_One/apple Bootstrap/index.html
@@ -187,27 +187,27 @@
         <!-- Tv and Airpods Section -->
         <section class="d-md-flex gap-2 my-2">
           <!-- Tv part -->
-          <div class="apple-items tv">
-            <div class="d-flex-column gap-auto">
-              <img
-                class="d-block mx-auto"
-                src="./images/icons/apple-tv-logo.png"
-                alt=""
-              />
-              <img
-                class="d-block mx-auto"
-                src="./images/icons/servant-logo.png"
-                alt=""
-              />
-              <div class="text-center">
-                <a href="#">
-                  Watch the trailer <i class="fa-solid fa-circle-play"></i>
-                </a>
-              </div>
+          <div
+            class="apple-items col tv d-flex flex-column justify-content-between"
+          >
+            <img
+              class="d-block mx-auto mt-4"
+              src="./images/icons/apple-tv-logo.png"
+              alt=""
+            />
+            <img
+              class="d-block mx-auto"
+              src="./images/icons/servant-logo.png"
+              alt=""
+            />
+            <div class="text-center mb-4">
+              <a class="fw-semibold nothover" href="#">
+                Watch the trailer <i class="fa-solid fa-circle-play"></i>
+              </a>
             </div>
           </div>
           <!-- Airpod part -->
-          <div></div>
+          <div class="apple-items airpod col"></div>
         </section>
       </div>
     </div>
