--- a/phase_One/apple Bootstrap/index.html
+++ b/phase_One/apple Bootstrap/index.html
@@ -207,7 +207,56 @@
             </div>
           </div>
           <!-- Airpod part -->
-          <div class="apple-items airpod col"></div>
+          <div class="apple-items airpod col">
+            <div class="text-white text-center pt-5">
+              <h1 class="fw-bolder">AirPods Pro</h1>
+              <div class="fs-5 text-center mx-auto" style="max-width: 450px">
+                Magic like you’ve never heard.
+              </div>
+            </div>
+            <div class="text-center d-flex gap-3 justify-content-center">
+              <a href="#">
+                Learn more <i class="fa-solid fa-angle-right"></i>
+              </a>
+              <a href="#">Buy <i class="fa-solid fa-angle-right"></i> </a>
+            </div>
+          </div>
+        </section>
+        <!-- Macbook pro and ipad section -->
+        <section class="d-md-flex gap-2 my-2">
+          <!-- Mac Section -->
+          <div class="apple-items col macbook">
+            <div class="text-center pt-4">
+              <div>
+                16-inch model
+              </div>
+              <h1 class="fw-bolder">
+                MacBook Pro
+              </h1>
+              <div class="fs-5 text-center mx-auto" style="max-width: 450px">
+                The best for the brightest.
+              </div>
+            </div>
+            <div class="text-center d-flex gap-3 justify-content-center">
+              <a href="#">
+                Learn more <i class="fa-solid fa-angle-right"></i>
+              </a>
+              <a href="#">Buy <i class="fa-solid fa-angle-right"></i> </a>
+            </div>
+          </div class="apple-items col">
+          <!-- ipad Section -->
+          <div class="apple-items col ipad">
+            <img class="d-block mx-auto mb-3 mt-5" src="./images/icons/new-ipad-logo.png" alt="">
+            <div class="fs-5 text-center mx-auto" style="max-width: 450px">
+              The best for the brightest.
+            </div>
+            <div class="text-center d-flex gap-3 justify-content-center">
+              <a href="#">
+                Learn more <i class="fa-solid fa-angle-right"></i>
+              </a>
+              <a href="#">Buy <i class="fa-solid fa-angle-right"></i> </a>
+            </div>
+          </div>
         </section>
       </div>
     </div>
