--- a/phase_One/apple Bootstrap/index.html
+++ b/phase_One/apple Bootstrap/index.html
@@ -101,12 +101,12 @@
 
     <!-- Your code goes in here -->
     <!--  -->
-    <div class="top-100 bg-light">
+    <div class="mt-5 pt-2">
       <div class="container-fluid" style="padding: 0">
         <!-- Macbook Section -->
-        <section>
+        <section class="bg-light">
           <div class="text-center">
-            <div>16-inch model</div>
+            <div class="pt-4">16-inch model</div>
             <h1 class="fw-bold">MacBook Pro</h1>
             <div class="fs-2">The best for the brightest.</div>
           </div>
@@ -119,7 +119,7 @@
           </div>
         </section>
         <!-- iphone 11 pro Section  -->
-        <section class="apple-items iphone-pro mx-0 text-white">
+        <section class="apple-items iphone-pro mx-0 text-white mt-3">
           <div class="text-center pt-4">
             <h1 class="fw-bolder">iPhone 11 Pro</h1>
             <div class="fs-4">Pro cameras. Pro display. Pro performance.</div>
@@ -131,7 +131,7 @@
           </div>
         </section>
         <!-- iphone 11 Section -->
-        <section class="apple-items iphone-11">
+        <section class="apple-items iphone-11 mt-3">
           <div class="text-center pt-4">
             <h1 class="fw-bolder">iPhone 11</h1>
             <div class="fs-4">Just the right amount of everything.</div>
@@ -143,10 +143,10 @@
           </div>
         </section>
         <!-- Watch and Card Section -->
-        <section class="d-md-flex gap-2 my-2">
+        <section class="d-md-flex gap-3">
           <!-- Watch part -->
-          <div class="apple-items watch mt-3 col">
-            <div>
+          <div class="apple-items watch my-3 col bg-light">
+            <div class="pt-3">
               <img
                 class="mx-auto d-block"
                 src="./images/icons/watch-series5-logo.png"
@@ -168,7 +168,7 @@
           <div class="apple-items apple-card my-3 col bg-light">
             <div>
               <img
-                class="mx-auto d-block pb-3"
+                class="mx-auto d-block py-3"
                 src="./images/icons/apple-card-logo.png"
                 alt=""
               />
@@ -185,13 +185,13 @@
           </div>
         </section>
         <!-- Tv and Airpods Section -->
-        <section class="d-md-flex gap-2 my-2">
+        <section class="d-md-flex gap-3">
           <!-- Tv part -->
           <div
-            class="apple-items col tv d-flex flex-column justify-content-between"
+            class="apple-items col tv d-flex flex-column justify-content-between bg-light mb-3"
           >
             <img
-              class="d-block mx-auto mt-4"
+              class="d-block mx-auto pt-4"
               src="./images/icons/apple-tv-logo.png"
               alt=""
             />
@@ -200,14 +200,14 @@
               src="./images/icons/servant-logo.png"
               alt=""
             />
-            <div class="text-center mb-4">
+            <div class="text-center pb-4">
               <a class="fw-semibold nothover" href="#">
                 Watch the trailer <i class="fa-solid fa-circle-play"></i>
               </a>
             </div>
           </div>
           <!-- Airpod part -->
-          <div class="apple-items airpod col">
+          <div class="apple-items airpod col mb-3">
             <div class="text-white text-center pt-5">
               <h1 class="fw-bolder">AirPods Pro</h1>
               <div class="fs-5 text-center mx-auto" style="max-width: 450px">
@@ -223,16 +223,12 @@
           </div>
         </section>
         <!-- Macbook pro and ipad section -->
-        <section class="d-md-flex gap-2 my-2">
+        <section class="d-md-flex gap-3">
           <!-- Mac Section -->
-          <div class="apple-items col macbook">
+          <div class="apple-items col macbook bg-light mb-3">
             <div class="text-center pt-4">
-              <div>
-                16-inch model
-              </div>
-              <h1 class="fw-bolder">
-                MacBook Pro
-              </h1>
+              <div>16-inch model</div>
+              <h1 class="fw-bolder">MacBook Pro</h1>
               <div class="fs-5 text-center mx-auto" style="max-width: 450px">
                 The best for the brightest.
               </div>
@@ -243,10 +239,14 @@
               </a>
               <a href="#">Buy <i class="fa-solid fa-angle-right"></i> </a>
             </div>
-          </div class="apple-items col">
+          </div>
           <!-- ipad Section -->
-          <div class="apple-items col ipad">
-            <img class="d-block mx-auto mb-3 mt-5" src="./images/icons/new-ipad-logo.png" alt="">
+          <div class="apple-items col ipad bg-light mb-3">
+            <img
+              class="d-block mx-auto mb-3 pt-3"
+              src="./images/icons/new-ipad-logo.png"
+              alt=""
+            />
             <div class="fs-5 text-center mx-auto" style="max-width: 450px">
               The best for the brightest.
             </div>
