--- a/phase_One/Apple Bootstrap_Group_version 1.0/index.html
+++ b/phase_One/Apple Bootstrap_Group_version 1.0/index.html
@@ -142,10 +142,10 @@
             <a href="#">Buy <i class="fa-solid fa-angle-right"></i> </a>
           </div>
         </section>
-        <!-- Watch and Card Section -->
+        <!-- Watch and Card Section Container -->
         <section class="row gap-md-3">
           <!-- Watch part -->
-          <div class="apple-items watch my-3 col-md bg-light">
+          <div class="apple-items watch mt-3 col-md bg-light">
             <div class="pt-3">
               <img
                 class="mx-auto d-block"
@@ -165,7 +165,7 @@
             </div>
           </div>
           <!-- Card part -->
-          <div class="apple-items apple-card my-3 col-md bg-light">
+          <div class="apple-items apple-card mt-3 col-md bg-light">
             <div>
               <img
                 class="mx-auto d-block py-3"
@@ -184,11 +184,11 @@
             </div>
           </div>
         </section>
-        <!-- Tv and Airpods Section -->
+        <!-- Tv and Airpods Section Container -->
         <section class="row gap-md-3">
           <!-- Tv part -->
           <div
-            class="apple-items col-md tv d-flex flex-column justify-content-between bg-light mb-3"
+            class="apple-items col-md tv d-flex flex-column justify-content-between bg-light mt-3"
           >
             <img
               class="d-block mx-auto pt-4"
@@ -207,7 +207,7 @@
             </div>
           </div>
           <!-- Airpod part -->
-          <div class="apple-items airpod col-md mb-3">
+          <div class="apple-items airpod col-md mt-3">
             <div class="text-white text-center pt-5">
               <h1 class="fw-bolder">AirPods Pro</h1>
               <div class="fs-5 text-center mx-auto" style="max-width: 450px">
@@ -222,10 +222,10 @@
             </div>
           </div>
         </section>
-        <!-- Macbook pro and ipad section -->
-        <section class="row gap-md-3">
+        <!-- Macbook pro and ipad section Container -->
+        <section class="row gap-md-3 mb-3">
           <!-- Mac Section -->
-          <div class="apple-items col-md macbook bg-light mb-3">
+          <div class="apple-items col-md macbook bg-light mt-3">
             <div class="text-center pt-4">
               <div>16-inch model</div>
               <h1 class="fw-bolder">MacBook Pro</h1>
@@ -241,7 +241,7 @@
             </div>
           </div>
           <!-- ipad Section -->
-          <div class="apple-items col-md ipad bg-light mb-3">
+          <div class="apple-items col-md ipad bg-light mt-3">
             <img
               class="d-block mx-auto mb-3 pt-3"
               src="./images/icons/new-ipad-logo.png"
