--- a/Phase_Three/MySqlPractice/public/index.html
+++ b/Phase_Three/MySqlPractice/public/index.html
@@ -9,24 +9,44 @@
   </head>
   <body>
     <div class="form">
-      <div class="title">Welcome</div>
-      <div class="subtitle">Let's create your account!</div>
-      <div class="input-container ic1">
-        <input id="firstname" class="input" type="text" placeholder=" " />
-        <div class="cut"></div>
-        <label for="firstname" class="placeholder">First name</label>
-      </div>
-      <div class="input-container ic2">
-        <input id="lastname" class="input" type="text" placeholder=" " />
-        <div class="cut"></div>
-        <label for="lastname" class="placeholder">Last name</label>
-      </div>
-      <div class="input-container ic2">
-        <input id="email" class="input" type="text" placeholder=" " />
-        <div class="cut cut-short"></div>
-        <label for="email" class="placeholder">Email</label>
-      </div>
-      <button type="text" class="submit">submit</button>
+      <form action="/add-product" method="post">
+        <div class="title">Apple</div>
+        <div class="subtitle">Let's create Apple Products</div>
+        <div class="input-container ic1">
+          <input
+            id="firstname"
+            class="input"
+            type="text"
+            name="productId"
+            placeholder=" "
+          />
+          <div class="cut"></div>
+          <label for="firstname" class="placeholder">Product ID</label>
+        </div>
+        <div class="input-container ic2">
+          <input
+            id="lastname"
+            class="input"
+            type="text"
+            name="productName"
+            placeholder=" "
+          />
+          <div class="cut"></div>
+          <label for="lastname" class="placeholder">Product Name</label>
+        </div>
+        <div class="input-container ic2">
+          <input
+            id="email"
+            class="input"
+            type="text"
+            name="productUrl"
+            placeholder=" "
+          />
+          <div class="cut cut-short"></div>
+          <label for="email" class="placeholder">Product Url</label>
+        </div>
+        <button type="submit" class="submit">submit</button>
+      </form>
     </div>
   </body>
 </html>
