puppy project updated

--- a/phase_One/puppy project media query/puppy responsive-sami/index.html
+++ b/phase_One/puppy project media query/puppy responsive-sami/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="missing">
           <div>
-            <p>puppy missing here !!</p>
+            <p>Puppy missing here !!</p>
           </div>
         </div>
         <div>
