update on index html

--- a/phase_One/puppy project media query/puppy responsive-sami/index.html
+++ b/phase_One/puppy project media query/puppy responsive-sami/index.html
@@ -35,7 +35,7 @@
       </section>
       <!-- Intrance Text to Second Section/ -->
       <div>
-        <p>more puppies</p>
+        <p>More puppies</p>
       </div>
       <!-- Section Two or section that holds two items -->
       <section>
